--- a/package.json
+++ b/package.json
@@ -5,53 +5,68 @@
   "author": "fzshuai",
   "license": "MIT",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve",
+    "build:prod": "vue-cli-service build",
+    "preview": "node build/index.js --preview",
     "lint": "vue-cli-service lint"
   },
+  "keywords": [
+    "vue",
+    "blog",
+    "dashboard",
+    "element-ui",
+    "boilerplate"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://gitee.com/fu-zhanshuai/fzshuai-blog-ui"
+  },
   "dependencies": {
-    "animate.css": "^3.7.2",
-    "axios": "^0.21.4",
-    "clipboard": "^2.0.6",
-    "core-js": "^3.6.4",
-    "dayjs": "^1.10.6",
+    "animate.css": "3.7.2",
+    "axios": "^1.3.6",
+    "clipboard": "2.0.11",
+    "core-js": "3.26.0",
+    "dayjs": "^1.11.7",
     "easy-typer-js": "^2.1.0",
-    "highlight.js": "^10.7.3",
+    "highlight.js": "10.7.3",
     "jquery": "^3.6.0",
     "markdown-it": "12.3.2",
-    "nprogress": "^0.2.0",
-    "recorderx": "^2.0.2",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
-    "tocbot": "^4.18.2",
-    "vue": "^2.6.11",
+    "nprogress": "0.2.0",
+    "recorderx": "2.0.2",
+    "stylus": "0.54.7",
+    "stylus-loader": "3.0.2",
+    "tocbot": "4.25.0",
+    "vue": "^2.7.16",
     "vue-avatar-cropper": "^1.0.9",
     "vue-axios": "^2.1.5",
     "vue-baberrage": "^3.2.4",
     "vue-cute-timeline": "^1.2.8",
     "vue-image-swipe": "^1.0.5",
     "vue-infinite-loading": "^2.4.5",
-    "vue-router": "^3.1.6",
-    "vue-social-share": "0.0.3",
-    "vuetify": "^2.6.4",
-    "vuex": "^3.1.3",
-    "vuex-persistedstate": "^3.0.1"
+    "vue-router": "^3.4.9",
+    "vue-social-share": "^0.0.3",
+    "vuetify": "^2.7.2",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-plugin-eslint": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
+    "@vue/cli-plugin-babel": "^4.5.18",
+    "@vue/cli-plugin-eslint": "^4.5.18",
+    "@vue/cli-service": "^4.5.18",
+    "@vue/eslint-config-prettier": "6.0.0",
+    "babel-eslint": "10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^1.19.1",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.4.7",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.3"
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "1.19.1",
+    "sass": "1.32.13",
+    "sass-loader": "10.2.0",
+    "vue-cli-plugin-vuetify": "2.4.7",
+    "vuetify-loader": "1.7.3"
+  },
+  "engines": {
+    "node": ">=10.13.0",
+    "npm": ">= 5.0.0"
   },
   "eslintConfig": {
     "root": true,
@@ -66,7 +81,14 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "generator-star-spacing": "off",
+      "no-tabs": "off",
+      "no-unused-vars": "off",
+      "no-console": "off",
+      "no-irregular-whitespace": "off",
+      "no-debugger": "off"
+    }
   },
   "browserslist": [
     "> 1%",
