update 关闭 ESLint 插件对 Vue 组件命名规则校验

--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
       "no-unused-vars": "off",
       "no-console": "off",
       "no-irregular-whitespace": "off",
-      "no-debugger": "off"
+      "no-debugger": "off",
+      "vue/multi-word-component-names": "off"
     }
   },
   "browserslist": [
